<resources>
    <string name="app_name">QUIZ\: The Six Wive Of HenryVIII</string>
    <string name="what_country">What country was Henry VIII the King of?</string>
    <string name="catherine_of_aragon">Henry\'s first wife was Catherine of Aragon. Where was Aragon?</string>
    <string name="anne_boleyn">Anne Boleyn was Henry\'s second wife. Who was their famous daughter?</string>
    <string name="queen_elizabeth_i">Queen Elizabeth I</string>
    <string name="bloody_mary">Queen Mary (otherwise known as Bloody Mary)</string>
    <string name="jane_seymour">Henry\'s third wife was Jane Seymour. How did she die?</string>
    <string name="adultery">She was executed for adultery</string>
    <string name="complications">She died from complications of childbirth</string>
    <string name="anne_of_cleves">Henry married Anne of Cleves in 1540. How did their marriage end?</string>
    <string name="threw_herself">She threw herself from the battlements of the Tower of London to avoid death at the hands of the executioner</string>
    <string name="annulled">The marriage was annulled and they remained friends</string>
    <string name="kathryn_howard">Henry married 19 year old Kathryn Howard when he was 39. She was executed less than two years later. Why?</string>
    <string name="heresy_and_witchcraft">She was accused of heresy and witchcraft</string>
    <string name="fornication_and_adultery">She was accused of fornication and adultery</string>
    <string name="spain">Spain</string>
    <string name="england">England</string>
    <string name="italy">Italy</string>
    <string name="the_netherlands">The Netherlands</string>
    <string name="see_your_results">See your results</string>
    <string name="history">6/7 \n Great job! You really know your history!</string>
    <string name="mary_queen_of_scots">Mary, Queen of Scots</string>
    <string name="lady_jane_grey">Lady Jane Grey</string>
    <string name="daughters">Henry had her killed because he wanted sons and she bore only daughters</string>
    <string name="she_died_of_the_plague">She died of the plague</string>
    <string name="virgin">Henry sent her back to her father in Germany when he found out that she wasn\'t a virgin. He kept her dowry</string>
    <string name="childbirth">She died in childbirth</string>
    <string name="france_with_her_lover">She attempted to escape to France with her lover</string>
    <string name="he_grew_tired_of_her">He grew tired of her</string>
    <string name="predecessors">Katherine Parr was the last wife of Henry VIII. How did she escape the fate of her predecessors?</string>
    <string name="cooking">He really liked her cooking</string>
    <string name="she_ran_away_to_spain_under_the_protection_of_her_uncle_the_king">She ran away to Spain under the protection of her uncle, the King</string>
    <string name="son">She finally bore him the son he had always wanted</string>
    <string name="outlived">She outlived him</string>
    <string name="perfect">7/7   Perfect Score! You are the history champ</string>
    <string name="thanks">5/7 Not bad!  Thanks for playing</string>
    <string name="less">You got fewer than 5 answers corrct. Sorry, not everyone can be good at history</string>
    <string name="your_answer">Your Answer</string>
    <string name="trouble">After all of that trouble, he still didn\'t have a son that lived to adulthood</string>
    <string name="queen_anyway">He disinherited his two daughters, each became Queen anyway</string>
    <string name="greatest">He didn\'t think a woman could carry on the Tudor dynasty, then his daughter became the greatest Queen in England\'s history</string>
    <string name="irony">EXTRA CREDIT
        \n
        \nWhat was the greatest irony of Henry\'s many marriages?</string>
    <string name="how_much_do_you_know_about_the_six_wives_of_king_henry_viii">How much do you know about the six wives of King Henry VIII?</string>
</resources>
