<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        tools:context="MainActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="start"
            android:scaleType="centerCrop"
            android:src="@drawable/tapestry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/how_much_do_you_know_about_the_six_wives_of_henry_vii_let_s_find_out"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:padding="16dp"
            android:src="@drawable/henry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/what_country"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <RadioButton
                android:id="@+id/a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#1d1613"
                android:text="@string/france"
                android:textColor="#1d1613" />

            <RadioButton
                android:id="@+id/b1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/spain"
                android:textColor="@color/colorAccent" />

            <RadioButton
                android:id="@+id/c1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/germany"
                android:textColor="@color/colorAccent" />

            <RadioButton
                android:id="@+id/england"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/england"
                android:textColor="@color/colorAccent" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_margin="16dp"
            android:background="@color/colorAccent" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:padding="16dp"
            android:src="@drawable/catherine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/catherine_of_aragon"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <RadioButton
                android:id="@+id/a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/italy"
                android:textColor="@color/colorAccent" />

            <RadioButton
                android:id="@+id/cspain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/spain"
                android:textColor="@color/colorAccent" />

            <RadioButton
                android:id="@+id/c2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/the_netherlands"
                android:textColor="@color/colorAccent" />


            <RadioButton
                android:id="@+id/d2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/england"
                android:textColor="@color/colorAccent" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_margin="16dp"
            android:background="@color/colorAccent" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:paddingBottom="12dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/anneb" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:text="@string/anne_boleyn"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/question3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="400dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:paddingTop="16dp"
                android:src="@drawable/elizabeth" />

            <ImageView
                android:layout_width="400dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:paddingBottom="16dp"
                android:src="@drawable/m_j" />

            <RadioButton
                android:id="@+id/elizabeth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/queen_elizabeth_i"
                android:textColor="@color/colorAccent" />

            <RadioButton
                android:id="@+id/scotts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/mary_queen_of_scots"
                android:textColor="@color/colorAccent" />

            <RadioButton
                android:id="@+id/b3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/bloody_mary"
                android:textColor="@color/colorAccent" />

            <RadioButton
                android:id="@+id/b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/lady_jane_grey"
                android:textColor="@color/colorAccent" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_margin="16dp"
            android:background="@color/colorAccent" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:padding="16dp"
            android:src="@drawable/jane" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/jane_seymour"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/question4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <RadioButton
                android:id="@+id/birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/complications"
                android:textColor="@color/colorAccent" />


            <RadioButton
                android:id="@+id/b4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/adultery"
                android:textColor="@color/colorAccent" />

            <RadioButton
                android:id="@+id/daughters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/daughters"
                android:textColor="@color/colorAccent" />

            <RadioButton
                android:id="@+id/plague"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/she_died_of_the_plague"
                android:textColor="@color/colorAccent" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_margin="16dp"
            android:background="@color/colorAccent" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:padding="16dp"
            android:src="@drawable/cleves" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/anne_of_cleves"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/question5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <RadioButton
                android:id="@+id/a5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/threw_herself"
                android:textColor="@color/colorAccent" />


            <RadioButton
                android:id="@+id/friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/annulled"
                android:textColor="@color/colorAccent" />

            <RadioButton
                android:id="@+id/virgin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/virgin"
                android:textColor="@color/colorAccent" />

            <RadioButton
                android:id="@+id/childbirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/childbirth"
                android:textColor="@color/colorAccent" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_margin="16dp"
            android:background="@color/colorAccent" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:padding="16dp"
            android:src="@drawable/kathryn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/kathryn_howard"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/question6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <RadioButton
                android:id="@+id/a6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/heresy_and_witchcraft"
                android:textColor="@color/colorAccent" />

            <RadioButton
                android:id="@+id/fornication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/fornication_and_adultery"
                android:textColor="@color/colorAccent" />

            <RadioButton
                android:id="@+id/d6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/france_with_her_lover"
                android:textColor="@color/colorAccent" />

            <RadioButton
                android:id="@+id/e6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/he_grew_tired_of_her"
                android:textColor="@color/colorAccent" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_margin="16dp"
            android:background="@color/colorAccent" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:padding="16dp"
            android:src="@drawable/katherine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/predecessors"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/question7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <RadioButton
                android:id="@+id/a7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/outlived"
                android:textColor="@color/colorAccent" />

            <RadioButton
                android:id="@+id/b7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/she_ran_away_to_spain_under_the_protection_of_her_uncle_the_king"
                android:textColor="@color/colorAccent" />

            <RadioButton
                android:id="@+id/c7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/cooking"
                android:textColor="@color/colorAccent" />

            <RadioButton
                android:id="@+id/d7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="@string/son"
                android:textColor="@color/colorAccent" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_margin="16dp"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:onClick="submit"
            android:background="@color/colorAccent"
            android:text="@string/see_your_results"
            android:textColor="#ffffff"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_gravity="start"
            android:scaleType="centerCrop"
            android:src="@drawable/tapestry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorPrimaryDark" />

    </LinearLayout>
</ScrollView>